--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,7 +11,6 @@ $accentRed:rgb(166,27,10);
 @import '_media-queries';
 
 body{
-	background-color: black;
 	background-image: url("../images/bwBackground.png");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
